# fungitastic-playground

./: .gitignore  EXPERIMENTS.md  README.md  TODO  main.py  pyproject.toml
artifacts/encdecnet_segmenter_20260429_225634_config:v0/: config.py
models/: smallsegnet.py
notebooks/: compare_wandb_runs.ipynb  dataset.ipynb  mask_fungi.py  test.ipynb  transfer_learning.ipynb
reports/: assistant_changes_report.md
scripts/: compare_checkpoint_predictions.py  compare_selected_best_mid_worst.sh  compare_wandb_runs.py  dataset.py  dataset_stats.py  download.py  evaluate_tta.py  prepare_dataset.py  prepare_dataset_configurable.py  prepare_dataset_light.py  train_model.py  train_model_gpu.py
src/config/: constants.py  deeplabv3_mobilenet_v3_large_segmenter.py  deeplabv3_resnet101_segmenter.py  encdecnet_big_300.py  encdecnet_segmenter.py  encdecnet_v2_segmenter.py  fcn_resnet101_segmenter.py  legacy_encdecnet_8class_segmenter.py  lraspp_mobilenet_v3_large_segmenter.py  resnet101_unet_512.py  resnet101_unet_640.py  resnet50_unet_512.py  schemas.py  wide_resnet50_2_unet_512.py
src/datasets/: augmentation.py  dataset.py  fungitastic.py  transforms.py
src/models/: advanced_segmentation_model.py  segmentation_model.py  weighted_augmented_segmentation_model.py
src/models/architectures/: deeplabv3_mobilenet_v3_large.py  deeplabv3_resnet101.py  encdecnet.py  encdecnet_v2.py  fcn_resnet101.py  lraspp_mobilenet_v3_large.py  resnet_unet.py
src/models/modules/: attention_gate.py  conv_block.py  residual_block.py
src/utils/: config.py  wandb.py
