[project]
name = "fungitastic-playground"
version = "0.1.0"
description = "NNTP Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2026.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
