[project]
name = "fungitastic-playground"
version = "0.1.0"
description = "NNTP Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.2",
    "fastparquet>=2026.3.0",
    "fiddle>=0.3.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "pytest>=9.0.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.0",
]
